Prepare UFID 0.6 RC
